# SDM_Plugin_Python

./: LICENSE.md  README.md
ifcexplorer_python3/: CMakeLists.txt  vcpkg.json
ifcexplorer_python3/scripts/: ifcdb_query.py  setup.py
ifcexplorer_python3/src/: Entity.cpp  Entity.hpp  EntityType.cpp  EntityType.hpp  Face.cpp  Face.hpp  Geometry.cpp  Geometry.hpp  IfcDBModule.cpp  IfcDBModule.hpp  IfcDBState.hpp  Interpreter.cpp  Interpreter.hpp  InterpreterError.cpp  InterpreterError.hpp  ManifestAction.cpp  ManifestAction.hpp  Material.cpp  ModuleDocument.cpp  ModuleDocument.hpp  PluginModule.cpp  PluginModule.hpp  PluginPython3.cpp  PluginPython3.hpp  PluginState.hpp  Polyline.cpp  Polyline.hpp  Population.hpp  Property.cpp  PythonAction.cpp  PythonAction.hpp  PythonPluginManifest.hpp  Relation.cpp  Relation.hpp  StandaloneScript.cpp  VenvAction.cpp  VenvAction.hpp  venvDlg.cpp  venvDlg.fbp  venvDlg.h  (+2 more)
